fix: Main content overflow

--- a/src/app/modules/layout/layout.component.scss
+++ b/src/app/modules/layout/layout.component.scss
@@ -8,6 +8,7 @@
 }
 
 .main-content {
+  width: 100%;
   background-color: $background;
   display: flex;
   flex-direction: column;
